==> IanTOPCS/For_you/軟硬體協同設計/USMART/USMART/usmart.c <==
#include "usmart.h"
#include "usart.h"
#include "sys.h"

void usmart_reset_runtime(void)
{
 
	TIM_ClearFlag(TIM4,TIM_FLAG_Update);//清除中斷標誌位 
	TIM_SetAutoreload(TIM4,0XFFFF);//將重裝載值設置到最大
	TIM_SetCounter(TIM4,0);		//清空定時器的CNT
	usmart_dev.runtime=0;	
}

u32 usmart_get_runtime(void)
{
	if(TIM_GetFlagStatus(TIM4,TIM_FLAG_Update)==SET)//在運行期間,產生了定時器溢出
	{
		usmart_dev.runtime+=0XFFFF;
	}
	usmart_dev.runtime+=TIM_GetCounter(TIM4);
	return usmart_dev.runtime;		//返回計數值
}

void TIM4_IRQHandler(void)
{ 		    		  			    
	if(TIM_GetITStatus(TIM4,TIM_IT_Update)==SET)//溢出中斷
	{
		usmart_dev.scan();	//執行usmart掃瞄	
		TIM_SetCounter(TIM4,0);		//清空定時器的CNT
		TIM_SetAutoreload(TIM4,100);//恢復原來的設置		    				   				     	    	
	}				   
	TIM_ClearITPendingBit(TIM4,TIM_IT_Update);  //清除中斷標誌位    
}

void Timer4_Init(u16 arr,u16 psc)
{
	NVIC_InitTypeDef   NVIC_InitStructure;
	TIM_TimeBaseInitTypeDef TIM_TimeBaseInitStructure;

	RCC_APB1PeriphClockCmd(RCC_APB1Periph_TIM4,ENABLE);  ///使能TIM4時鐘

	TIM_TimeBaseInitStructure.TIM_Prescaler=psc;  //定時器分頻
	TIM_TimeBaseInitStructure.TIM_CounterMode=TIM_CounterMode_Up; //向上計數模式
	TIM_TimeBaseInitStructure.TIM_Period=arr;   //自動重裝載值
	TIM_TimeBaseInitStructure.TIM_ClockDivision=TIM_CKD_DIV1; 
	
	TIM_TimeBaseInit(TIM4,&TIM_TimeBaseInitStructure);//初始化定時器4
	
	TIM_ITConfig(TIM4,TIM_IT_Update,ENABLE); //允許定時器4更新中斷
	TIM_Cmd(TIM4,ENABLE); //使能定時器4
 
	NVIC_InitStructure.NVIC_IRQChannel = TIM4_IRQn;//外部中斷4
  NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0x03;//搶佔優先級3
  NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0x03;//子優先級3
  NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;//使能外部中斷通道
  NVIC_Init(&NVIC_InitStructure);//配置NVIC
	 							 
}

void usmart_scan(void)
{
	u8 sta,len;  
	if(USART_RX_STA&0x8000)//串口接收完成？
	{					   
		len=USART_RX_STA&0x3fff;	//得到此次接收到的數據長度
		USART_RX_BUF[len]='\0';	//在末尾加入結束符. 
		sta=usmart_dev.cmd_rec(USART_RX_BUF);//得到函數各個信息
		if(sta==0)usmart_dev.exe();	//執行函數 
		else 
		{  
			len=usmart_sys_cmd_exe(USART_RX_BUF);
			if(len!=USMART_FUNCERR)sta=len;
			if(sta)
			{
				switch(sta)
				{
					case USMART_FUNCERR:
						printf("函數錯誤!\r\n");   			
						break;	
					case USMART_PARMERR:
						printf("參數錯誤!\r\n");   			
						break;				
					case USMART_PARMOVER:
						printf("參數太多!\r\n");   			
						break;		
					case USMART_NOFUNCFIND:
						printf("未找到匹配的函數!\r\n");   			
						break;		
				}
			}
		}
		USART_RX_STA=0;//狀態寄存器清空	    
	}
}
