==> joyceandpig/STM32F429-Project/USMART/usmart.c <==
#include "usmart.h"
#include "stdio.h"
#include "string.h"
#include "debug.h"

void usmart_reset_runtime(void)
{
    __HAL_TIM_CLEAR_FLAG(&TIM4_Handler,TIM_FLAG_UPDATE);//清除中断标志位 
    __HAL_TIM_SET_AUTORELOAD(&TIM4_Handler,0XFFFF);     //将重装载值设置到最大
    __HAL_TIM_SET_COUNTER(&TIM4_Handler,0);             //清空定时器的CNT
	usmart_dev.runtime=0;	
}

u32 usmart_get_runtime(void)
{
	if(__HAL_TIM_GET_FLAG(&TIM4_Handler,TIM_FLAG_UPDATE)==SET)//在运行期间,产生了定时器溢出
	{
		usmart_dev.runtime+=0XFFFF;
	}
	usmart_dev.runtime+=__HAL_TIM_GET_COUNTER(&TIM4_Handler);
	return usmart_dev.runtime;		//返回计数值
}

void TIM4_IRQHandler(void)
{ 		    		  			       
    if(__HAL_TIM_GET_IT_SOURCE(&TIM4_Handler,TIM_IT_UPDATE)==SET)//溢出中断
    {
        usmart_dev.scan();	//执行usmart扫描
        __HAL_TIM_SET_COUNTER(&TIM4_Handler,0);;    //清空定时器的CNT
        __HAL_TIM_SET_AUTORELOAD(&TIM4_Handler,100);//恢复原来的设置
    }
    __HAL_TIM_CLEAR_IT(&TIM4_Handler, TIM_IT_UPDATE);//清除中断标志位
}

void Timer4_Init(u16 arr,u16 psc)
{ 
    //定时器4
    __HAL_RCC_TIM4_CLK_ENABLE();
    HAL_NVIC_SetPriority(TIM4_IRQn,TIM4_IRQn_Priority,0);    //设置中断优先级，抢占优先级，子优先级
    HAL_NVIC_EnableIRQ(TIM4_IRQn);          //开启ITM4中断    
    
    TIM4_Handler.Instance=TIM4;                          //通用定时器4
    TIM4_Handler.Init.Prescaler=psc;                     //分频
    TIM4_Handler.Init.CounterMode=TIM_COUNTERMODE_UP;    //向上计数器
    TIM4_Handler.Init.Period=arr;                        //自动装载值
    TIM4_Handler.Init.ClockDivision=TIM_CLOCKDIVISION_DIV1;
    HAL_TIM_Base_Init(&TIM4_Handler);
    HAL_TIM_Base_Start_IT(&TIM4_Handler); //使能定时器4和定时器4中断 					 
}

void usmart_scan(void)
{
	u8 sta;
	u16 len;
	u8 *RecvBuffPtr;	
	if(USMART_StatusCheck(USMART_RECV_FLAG_OVER))//串口接收完成？
	{					   
		RecvBuffPtr = USMART_RecvBuffAdd(&len);//得到此次接收到的数据长度和缓存地址
		
		sta=usmart_dev.cmd_rec(RecvBuffPtr);//得到函数各个信息
		
		if(sta==0)usmart_dev.exe();	//执行函数 
		else 
		{  
			len = usmart_sys_cmd_exe(RecvBuffPtr);
			
			if(len!=USMART_FUNCERR)sta=len;
			if(sta)
			{   
				switch(sta)
				{
					case USMART_FUNCERR:
						MyPrintf("函数错误!\r\n");
                      				
						break;	
					case USMART_PARMERR:
						MyPrintf("参数错误!\r\n");   			
						break;				
					case USMART_PARMOVER:
						MyPrintf("参数太多!\r\n");   			
						break;		
					case USMART_NOFUNCFIND:
						MyPrintf("未找到匹配的函数!\r\n");   			
						break;		
				}
			}
		}
		USMART_StatusClear(USMART_RECV_FLAG_OVER);//清除接收完成标记	 
	}
	else if(USMART_StatusCheck(USMART_RECV_FLAG_TAB))
	{//检测到tab键
		
		u8 i,rval;//状态 	 
		u8 spnum;
		u8 tfname[MAX_FNAME_LEN];//临时存放本地函数名
		
		u8 str[10][MAX_FNAME_LEN];//存放本地函数名
		
		u8 count = 0;
		USMART_StatusClear(USMART_RECV_FLAG_TAB);//清除tab标记
		
		RecvBuffPtr = USMART_RecvBuffAdd(&len);//得到此次接收到的数据长度和缓存地址
		
		for(i=0;i<usmart_dev.fnum;i++)
		{//查找匹配函数						
			usmart_get_fname((u8*)usmart_dev.funs[i].name,tfname,&spnum,&rval);//得到本地函数名及参数个数
			if(strncmp((const char *)RecvBuffPtr,(const char *)tfname,len) == 0)
			{	
				strcpy((char *)str[count],(const char *)usmart_dev.funs[i].name);//复制本地函数名
				count++;//匹配数+1
				if(count ==10)//超过10个跳出
					break;
			}
		}
		
		if(count == 1)
		{//唯一匹配数
			sta=usmart_get_fname(str[0],tfname,&spnum,&rval);//得到本地函数名及参数个数

			for( i=0;i< len ;i++)
			{
				MyPrintf("\x8\x1b[\xff\x50");
			}			
			USMART_ModifyRecvBuff(tfname);//把函数名复制给接收缓存			
			MyPrintf("%s",RecvBuffPtr);
		}
		else if(count > 1)
		{//多个匹配
			u8 tmp[MAX_FNAME_LEN];
			MyPrintf("\r\n%d个匹配函数",count);
			MyPrintf("\r\n=========================");
			for(i=0;i<count;i++)
			{
				MyPrintf("\r\n%s",str[i]);
			}
			MyPrintf("\r\n=========================\r\n");
			strncpy((char *)tmp,(const char *)RecvBuffPtr,len);
			tmp[len] = 0;
			MyPrintf("%s",tmp);
		}
		else 
		{//未找到匹配
			USMART_StatusClear(USMART_RECV_FLAG_OVER);//清除接收完成标记	
			MyPrintf("\r\n=========================\r\n");
			MyPrintf("\r\n     无匹配函数");
			MyPrintf("\r\n=========================\r\n");
			
		}
		
	}
		
}
